 32. New Prayers: Improved Warning Glyph, Sense Parish, Reflect Prayer, Amplify Unholy Weapon
 33. New Prayers: Empower Holy Weapon, Empower Sacred Weapon, Imbue Shield, Share Boon, Empower Just Weapon
 34. New Thief skills: Heroic Reflexes, Condemn Mark, Steal Boon, Whip Strip
 35. New Prayers: Empower Unjust Weapon, Empower Modest Weapon, Greater Warding Glyph, Find Sacred Item
 36. New Prayers: Empower Holy Weapon, Empower Unholy Weapon, Empower Sacred Weapon
# Build 5.9.10 Release 6/16/2020
  1. Wands/etc have enchant type as a restriction, WandMaking/StaffMaking/Rodsmithing support.
  2. New PLAYERDEATH option: RETAIN -- to allow player mobs to keep their items on death.
  3. Scriptable GSTAT now supports BASESTRENGTH, BASEDEXTERITY, etc.. and BASEDAMAGE, etc..
  4. New skills: Shard Use, Relic Use, Light Placebo, Placebo, Krakenform, Planar Tactics
  5. New prayers: enchant relic, recharge relic, read prayer, clarify prayer, planar plague
  6. New chants: Enchant Shards, Recharge Shards, Read Runes, Refresh Runes, Fishy Fecundity
  7. New songs: Restore Music, Enchant Instrument, Recharge Instrument, Read Music, Saudade
  8. New questmaker templates: competitive/normal_collect5, competitive/normal_delivery4, normal/travel4
  9. Crafting skills can now list recipes by level range, eg list 5-, list -5, list 10-20
 10. New disable flags: AUTOMOODS, DIS955RULE
 11. New Scriptable triggers: CAST_PROG and CASTING_PROG
 12. New questmaker templates: normal_dispel1
 13. New achievement field: VISIBLEMASK
 14. Prop_RoomDark/Lit now support HOURS argument.
 15. New climate type: VOID, for disabling weather locally
 16. New domain types: indoor seaport, cave seaport
 17. New locales: Void, CaveSeaPort, WoodSeaPort
 18. New generic skill type: GenGatheringSkill, with CL and MudGrinder support
 19. Quest engine now supports saved generic abilities, ability groups, etc
 20. Game Builders Guide updated for writing MOBPROG for quests, and new quest fields