@@ -1897,6 +1897,15 @@ Example  : pray "protect health"\n\r\
 The caster gains divine immunity from poison, plague, and certain mind attacks, such as \
 the charm spell, and some bard songs.
 
+PRAYER_PROTECTSACREDITEM=PRAYER_PRAYER_PROTECT_SACRED_ITEM
+PRAYER_PRAYER_PROTECT_SACRED_ITEM=<ABILITY>\
+Usage    : PRAY "PROTECT SACRED ITEM" [TARGET]\n\r\
+Example  : pray "protect sacred item" sword\n\r\
+This prayer grants the target sacred item divine protection from destruction or \
+wear and tear forever.  The item must be imbued by the casters deity to be \
+protected, such as from an Empowerment or other divine enchantment.  This prayer \
+costs considerable experience to cast.
+
 PRAYER_PROTCOLD=PRAYER_PROTECTION_COLD
 PROTECTION_FROM_COLD=PRAYER_PROTECTION_COLD
 PRAYER_PROTECTION_COLD=<ABILITY>\
